# cpp-memory-leak-detection

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: memory_leak.h
